--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,15 +23,15 @@ t<!DOCTYPE html>
     <body>
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="/">
+            <div class="container-fluid"><a class="navbar-brand" href="/">
   <span class="blue">F</span>
   <span class="red">I</span>
   <span class="yellow">N</span>
   <span class="green">A</span>
   <span class="blue">N</span>
   <span class="red">C</span>
-  <span class="green">E</span><span class="red">&nbsp;Portfolio</span>
+  <span class="green">E</span>
+  <span class="red"> Portfolio</span>
 </a>
 
 
