--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,8 @@ t<!DOCTYPE html>
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid"><a class="navbar-brand" href="/">
-            <a class="navbar-brand" href="/"><span class="blue">F</span><span class="red">I</span><span class="yellow">N</span><span class="green">A</span><span class="blue">N</span><span class="red">C</span><<span class="green">E</span>span class="red">Portfolio</span></a>
+            <a class="navbar-brand" href="/"><span class="blue">F</span><span class="red">I</span><span class="yellow">N</span><span class="green">A</span><span class="blue">N</span><span class="red">C</span><span class="green">E</span><span class="red">Portfolio</span></a>
+
 
 
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
