--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,7 +24,8 @@
 
         <nav class="bg-light border navbar navbar-expand-md navbar-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/"><span class="blue">F</span><span class="red">I</span><span class="yellow">N</span><span class="green">A</span><span class="blue">A</span><span class="red">N</span><span class="blue">C</span><span class="red">E</span> <span class="red">Portfolio</span></a>
+                <a class="navbar-brand" href="/"><span class="blue">F</span><span class="red">I</span><span class="yellow">N</span><span class="green">A</span><span class="red">N</span><span class="blue">C</span><span class="red">E</span> <span class="red">Portfolio</span></a>
+
                 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
                     <span class="navbar-toggler-icon"></span>
                 </button>
